--- a/style.css
+++ b/style.css
@@ -20,56 +20,48 @@ body{
     width: 325px;
     height: 550px;
     padding: 5px;
+    padding-top: 1rem;
     border-radius: 1rem;
     overflow: visible;
     background: #f7ba2b;
     background: var(--background);
     position: relative;
     z-index: 1;
+    
    }
+   .display {
+    grid-column: 1 / -1;
+    padding: 16px;
+    display: flex;
+    margin: 10px 10px 20px;
+    flex-direction: column;
+    align-items: flex-end;
+    background-color: #363636;
+    border-radius: 32px;
+    text-align: right;
+    justify-content: space-between;
+    word-break: break-all;
+    box-shadow: 0px 0px 0px 10px #00000033;
+}
+#valor-actual {
+    font-size: 1.5em;
+}
+
+#valor-anterior {
+    font-size: 2em;
+}
    
-   .calculadora::after {
-    position: absolute;
-    content: "";
-    top: 30px;
-    left: 0;
-    right: 0;
-    z-index: -1;
-    height: 100%;
-    width: 100%;
-    transform: scale(0.8);
-    filter: blur(25px);
-    background: #f7ba2b;
-    background: var(--background);
-    transition: opacity .5s;
-   }
    
    .calculadora-info {
-    --color: #181818;
-    background: var(--color);
-    color: var(--color);
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
-    height: 100%;
-    overflow: visible;
-    border-radius: .7rem;
    }
    
-   .calculadora .titulo {
-    font-weight: bold;
-    letter-spacing: .1em;
-   }
    
-   /*Hover*/
-   .calculadora:hover::after {
-    opacity: 0;
-   }
    
-   .calculadora:hover .calculadora-info {
-    color: #f7ba2b;
-    transition: color 1s;
-   }
+   
+
+   
    
    
