--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     margin: 10px 10px 20px;
     flex-direction: column;
     align-items: flex-end;
-    background-color: #363636;
+    background-color: #e4bcbc;
     border-radius: 32px;
     text-align: right;
     justify-content: space-between;
