--- a/style.css
+++ b/style.css
@@ -5,21 +5,27 @@
 
 body{
     
-    justify-content: center;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
-    padding-top: 3rem;
+    padding-top: 2rem;
     padding-left: 1rem;
-    padding-right: 1rem;
+    padding-right: 3rem;
 
 
 }
+.contenedor {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
 .calculadora {
     --background: linear-gradient(to left, #f7ba2b 0%, #ea5358 100%);
     width: 325px;
     height: 550px;
-    padding: 5px;
     padding-top: 1rem;
     border-radius: 1rem;
     overflow: visible;
@@ -27,36 +33,44 @@ body{
     background: var(--background);
     position: relative;
     z-index: 1;
-    
    }
+
+
+
+button {
+    border-radius: 15px;
+    border-width: 4px;
+    position: relative;
+    padding: 1rem 1rem;
+    background-color: #00000033;
+
+    
+}
+
+
+
    .display {
     grid-column: 1 / -1;
     padding: 16px;
     display: flex;
-    margin: 10px 10px 20px;
+    margin: 10px 10px 10px;
     flex-direction: column;
     align-items: flex-end;
-    background-color: #e4bcbc;
-    border-radius: 32px;
+    background-color: #f5eded;
+    border-radius: 5px;
     text-align: right;
     justify-content: space-between;
     word-break: break-all;
     box-shadow: 0px 0px 0px 10px #00000033;
 }
 #valor-actual {
-    font-size: 1.5em;
+    font-size: 1rem;
 }
 
 #valor-anterior {
-    font-size: 2em;
+    font-size: 2rem;
 }
-   
-   
-   .calculadora-info {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-   }
+
    
    
    
