--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body{
     padding-left: 1rem;
     padding-right: 3rem;
     margin: 4px auto;
+    width: auto;
+    height: auto;
 
 
 }
@@ -78,7 +80,7 @@ button:hover {
     justify-content: space-between;
     word-break: break-all;
     box-shadow: 0px 0px 0px 10px #00000033;
-    
+
 }
 #valor-actual {
     font-size: 1rem;
